--- a/plone_interact/static/plone_interact.css
+++ b/plone_interact/static/plone_interact.css
@@ -71,6 +71,14 @@ form.noti-box-mine div.noti-textarea-wrapper {
 
 form.noti-box-mine div.noti-textarea-wrapper textarea {
     width: 100%;
+    border: 0;
+    background-color: transparent;
+    color: #333 !important;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.46);
+    -webkit-font-smoothing: antialiased;
+    /* reset back to normal fonts. */
+    font-family: Arial,​FreeSans,​sans-serif;
+    font-size: 100%;
 }
 
 
@@ -91,7 +99,7 @@ form.noti-box-mine:after {
 }
 .noti-leftlabel-in {
     position: absolute;
-    background-color: black;
+    background-color: #00a0a0;
     opacity: 0.12;
     width: 100%;
     height: 100%;
