--- a/plone_interact/static/plone_interact.css
+++ b/plone_interact/static/plone_interact.css
@@ -16,17 +16,17 @@
     border-radius: 5px;
     padding: 0.5em;
     margin: 1em 0;
-
-    max-height: 0;
     overflow: hidden;
     transition: all ease 0.2s;
     -moz-transition: all ease 0.2s;
     -webkit-transition: all ease 0.2s;
     -o-transition: all ease 0.2s;
+    max-height: 0;
 }
 
 .noti-box-show {
-    max-height: 100px; 
+    max-height: 100%;
+    min-height: 15px;
 }
 
 .noti-box-done {
